# mapreduce-framework

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
Parin_Patel_p4/: README.md
src/: CMakeLists.txt  file_shard.h  mapreduce_impl.cc  mapreduce_impl.h  mapreduce_spec.h  master.h  masterworker.proto  mr_tasks.h  run_worker.cc  worker.h
test/: CMakeLists.txt  config.ini  validator.py
